--- a/manimlib/ctex_template.tex
+++ b/manimlib/ctex_template.tex
@@ -14,9 +14,18 @@
 \usepackage{ragged2e}
 \usepackage{physics}
 \usepackage{xcolor}
-\usepackage{microtype}
+% \usepackage{microtype}
 %\DisableLigatures{encoding = *, family = * }
-\usepackage[UTF8]{ctex}
+% \usepackage[UTF8]{ctex}
+
+\usepackage[T1]{fontenc}
+\usepackage{inputenc}
+\usepackage{xeCJK}
+\setCJKmainfont[BoldFont=SimHei]{SimSun}
+\setCJKmonofont{SimSun}     % 设置缺省中文字体
+\setCJKsansfont{SimSun}         
+\setmainfont{Palatino-Roman}
+
 \linespread{1}
 
 \begin{document}
