--- a/manimlib/tex_template.tex
+++ b/manimlib/tex_template.tex
@@ -1,8 +1,6 @@
 \documentclass[preview]{standalone}
 
 \usepackage[english]{babel}
-\usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{dsfont}
@@ -17,8 +15,28 @@
 \usepackage{physics}
 \usepackage{xcolor}
 \usepackage{microtype}
-\DisableLigatures{encoding = *, family = * }
-%\usepackage[UTF8]{ctex}
+% \usepackage{mathpazo} % 改变了字体
+\usepackage{calligra}
+\usepackage{tikz}
+\usepackage[siunitx,RPvoltages,european]{circuitikz}
+
+\usepackage{fontenc}
+% \usepackage{inputenc}
+
+% \usepackage{xeCJK}
+% \setCJKmainfont[BoldFont=SimHei]{SimSun}
+% \setCJKmonofont{SimSun}     % 设置缺省中文字体
+% \setCJKsansfont{SimSun}
+
+% \usepackage{xeCJK}
+% \setCJKmainfont[BoldFont=SimHei]{SimSun}
+% \setCJKmonofont{SimSun}     % 设置缺省中文字体
+% \setCJKsansfont{SimSun}
+
+% \DeclareFixedFont{\myfont}{OT1}{pgoth}{m}{n}{11pt}
+
+% \DisableLigatures{encoding = *, family = * }
+% \usepackage[UTF8]{ctex}
 \linespread{1}
 
 \begin{document}
