--- a/manimlib/tex_template.tex
+++ b/manimlib/tex_template.tex
@@ -15,28 +15,17 @@
 \usepackage{physics}
 \usepackage{xcolor}
 \usepackage{microtype}
+
 % \usepackage{mathpazo} % 改变了字体
-\usepackage{calligra}
 \usepackage{tikz}
 \usepackage[siunitx,RPvoltages,european]{circuitikz}
 
-\usepackage{fontenc}
-% \usepackage{inputenc}
-
-% \usepackage{xeCJK}
-% \setCJKmainfont[BoldFont=SimHei]{SimSun}
-% \setCJKmonofont{SimSun}     % 设置缺省中文字体
-% \setCJKsansfont{SimSun}
-
-% \usepackage{xeCJK}
-% \setCJKmainfont[BoldFont=SimHei]{SimSun}
-% \setCJKmonofont{SimSun}     % 设置缺省中文字体
-% \setCJKsansfont{SimSun}
+\usepackage[T1]{fontenc}
 
 % \DeclareFixedFont{\myfont}{OT1}{pgoth}{m}{n}{11pt}
 
 % \DisableLigatures{encoding = *, family = * }
-% \usepackage[UTF8]{ctex}
+
 \linespread{1}
 
 \begin{document}
