--- a/manimlib/ctex_template.tex
+++ b/manimlib/ctex_template.tex
@@ -17,7 +17,8 @@
 % \usepackage{microtype}
 %\DisableLigatures{encoding = *, family = * }
 % \usepackage[UTF8]{ctex}
-
+\usepackage{tikz}
+\usepackage[siunitx,RPvoltages,european]{circuitikz}
 \usepackage[T1]{fontenc}
 \usepackage{inputenc}
 \usepackage{xeCJK}
