--- a/manimlib/ctex_template.tex
+++ b/manimlib/ctex_template.tex
@@ -9,23 +9,37 @@
 \usepackage{relsize}
 \usepackage{textcomp}
 \usepackage{mathrsfs}
-\usepackage{calligra}
 \usepackage{wasysym}
 \usepackage{ragged2e}
 \usepackage{physics}
 \usepackage{xcolor}
 % \usepackage{microtype}
-%\DisableLigatures{encoding = *, family = * }
-% \usepackage[UTF8]{ctex}
-\usepackage{tikz}
-\usepackage[siunitx,RPvoltages,european]{circuitikz}
-\usepackage[T1]{fontenc}
-\usepackage{inputenc}
+
+%% font
+% \usepackage{mathpazo}
+% \usepackage{mathptmx} 
+% \usepackage{times}
+% \usepackage{chancery}
+% \usepackage{tgchorus}
+\usepackage[T1,OT1]{fontenc}
+\usepackage{palatino}  % english defalut font
+\usepackage{calligra}  % hand-writing \calligra
+\newcommand{\sz}[1]{\fontencoding{OT1}\fontfamily{pplj}\fontseries{m}\selectfont #1}   % non-aligned number
+\newcommand{\gt}[1]{\fontencoding{OT1}\fontfamily{pgoth}\fontseries{m}\selectfont #1}  % Gothic font
+
+%% xelatex font
+\usepackage{fontspec}
 \usepackage{xeCJK}
-\setCJKmainfont[BoldFont=SimHei]{SimSun}
-\setCJKmonofont{SimSun}     % 设置缺省中文字体
-\setCJKsansfont{SimSun}         
-\setmainfont{Palatino-Roman}
+\setCJKmainfont[BoldFont={SimHei}]{Noto Serif CJK SC}
+\setCJKmonofont{SimSun}
+\setCJKsansfont{方正粗金陵简体}  % \sf Chinese title font
+\setmainfont{Palatino-Roman}    % \sf English hand-writing font
+\setsansfont{Zapfino}
+
+\usepackage[siunitx,RPvoltages,european]{circuitikz}
+\usepackage{tikz}
+
+% \DisableLigatures{encoding = *, family = * }
 
 \linespread{1}
 
