--- a/manimlib/tex_template.tex
+++ b/manimlib/tex_template.tex
@@ -31,9 +31,9 @@
 %% xelatex font
 % \usepackage{fontspec}
 % \usepackage{xeCJK}
-% \setCJKmainfont[BoldFont={SimHei}]{Noto Serif CJK SC}
+% \setCJKmainfont[BoldFont={Noto Sans S Chinese}]{Noto Serif CJK SC}
 % \setCJKmonofont{SimSun}
-% \setCJKsansfont{方正粗金陵简体}  % \sf Chinese title font
+% \setCJKsansfont{Noto Serif CJK SC 粗体}  % \sf Chinese title font
 % \setmainfont{Palatino-Roman}    % \sf English hand-writing font
 % \setsansfont{Zapfino}
 
